[gd_scene load_steps=24 format=3 uid="uid://ewlnwhxmt1pr"]

[ext_resource type="Script" path="res://player.gd" id="1_460gp"]
[ext_resource type="Texture2D" uid="uid://cixk8mfx06y44" path="res://assets/player/adventurer-attack1-00.png" id="1_p8hgm"]
[ext_resource type="Texture2D" uid="uid://fef3kcjw55ey" path="res://assets/player/adventurer-attack1-01.png" id="2_e7hmv"]
[ext_resource type="Script" path="res://player_body.gd" id="2_vfihl"]
[ext_resource type="Texture2D" uid="uid://80sjuauuc70e" path="res://assets/player/adventurer-attack1-02.png" id="3_na620"]
[ext_resource type="Texture2D" uid="uid://x0qwebe4bmm7" path="res://assets/player/adventurer-attack1-03.png" id="4_8k5my"]
[ext_resource type="Texture2D" uid="uid://bo1fw1va1jcb4" path="res://assets/player/adventurer-attack1-04.png" id="5_dcow3"]
[ext_resource type="Texture2D" uid="uid://k2igrcc31kx3" path="res://assets/player/adventurer-idle-00.png" id="6_2okeo"]
[ext_resource type="Texture2D" uid="uid://by6aarhhtvr8b" path="res://assets/player/adventurer-idle-01.png" id="7_l57ta"]
[ext_resource type="Texture2D" uid="uid://dt4gftfl0cjwq" path="res://assets/player/adventurer-idle-02.png" id="8_ikd0h"]
[ext_resource type="Texture2D" uid="uid://qhq7nohs6j2c" path="res://assets/player/adventurer-idle-03.png" id="9_vsgkw"]
[ext_resource type="Texture2D" uid="uid://clghp78nw4hwe" path="res://assets/player/adventurer-run-00.png" id="10_pfvgh"]
[ext_resource type="Texture2D" uid="uid://cupdy54xo7yte" path="res://assets/player/adventurer-run-01.png" id="11_osyfn"]
[ext_resource type="Texture2D" uid="uid://d2ft6wwaushhn" path="res://assets/player/adventurer-run-02.png" id="12_54vyu"]
[ext_resource type="Texture2D" uid="uid://cqlsei4wgadpg" path="res://assets/player/adventurer-run-03.png" id="13_whhci"]
[ext_resource type="Texture2D" uid="uid://dsugi1pcxsci0" path="res://assets/player/adventurer-run-04.png" id="14_gxm4u"]
[ext_resource type="Texture2D" uid="uid://dw4xldx75hrb7" path="res://assets/player/adventurer-run-05.png" id="15_1pnq8"]
[ext_resource type="Texture2D" uid="uid://ddxbg8udhids" path="res://assets/player/adventurer-slide-00.png" id="16_uw5q8"]
[ext_resource type="Texture2D" uid="uid://cdk0b5622r7gb" path="res://assets/player/adventurer-slide-01.png" id="17_winax"]
[ext_resource type="PackedScene" uid="uid://bd0py5kuig1bu" path="res://attack_detector.tscn" id="20_d4gbw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axsms"]
size = Vector2(89, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1uv6"]
size = Vector2(86, 126)

[sub_resource type="SpriteFrames" id="SpriteFrames_sm67o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_p8hgm")
}, {
"duration": 1.0,
"texture": ExtResource("2_e7hmv")
}, {
"duration": 1.0,
"texture": ExtResource("3_na620")
}, {
"duration": 1.0,
"texture": ExtResource("4_8k5my")
}, {
"duration": 1.0,
"texture": ExtResource("5_dcow3")
}],
"loop": false,
"name": &"Attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2okeo")
}, {
"duration": 1.0,
"texture": ExtResource("7_l57ta")
}, {
"duration": 1.0,
"texture": ExtResource("8_ikd0h")
}, {
"duration": 1.0,
"texture": ExtResource("9_vsgkw")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_pfvgh")
}, {
"duration": 1.0,
"texture": ExtResource("11_osyfn")
}, {
"duration": 1.0,
"texture": ExtResource("12_54vyu")
}, {
"duration": 1.0,
"texture": ExtResource("13_whhci")
}, {
"duration": 1.0,
"texture": ExtResource("14_gxm4u")
}, {
"duration": 1.0,
"texture": ExtResource("15_1pnq8")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_uw5q8")
}, {
"duration": 1.0,
"texture": ExtResource("17_winax")
}],
"loop": true,
"name": &"Slide",
"speed": 10.0
}]

[node name="Player" type="Node2D"]
script = ExtResource("1_460gp")

[node name="PlayerBody" type="CharacterBody2D" parent="."]
script = ExtResource("2_vfihl")

[node name="PlayerArea" type="Area2D" parent="PlayerBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody/PlayerArea"]
position = Vector2(155, 103)
shape = SubResource("RectangleShape2D_axsms")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2(155, 103)
shape = SubResource("RectangleShape2D_b1uv6")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="PlayerBody"]
position = Vector2(155, 92)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_sm67o")
animation = &"Idle"
autoplay = "Idle"

[node name="CanSlideTimer" type="Timer" parent="PlayerBody"]
wait_time = 0.5
one_shot = true

[node name="SlidingTimer" type="Timer" parent="PlayerBody"]
wait_time = 0.3
one_shot = true

[node name="Detectors" type="Node2D" parent="."]

[node name="AttackDetectorLeft" parent="Detectors" instance=ExtResource("20_d4gbw")]
position = Vector2(90, 105)
scale = Vector2(2, 6.5)

[node name="AttackDetectorRight" parent="Detectors" instance=ExtResource("20_d4gbw")]
position = Vector2(220, 105)
scale = Vector2(2, 6.5)

[connection signal="animation_finished" from="PlayerBody/AnimatedSprite" to="PlayerBody" method="_on_animated_sprite_animation_finished"]
[connection signal="timeout" from="PlayerBody/CanSlideTimer" to="PlayerBody" method="_on_can_slide_timer_timeout"]
[connection signal="timeout" from="PlayerBody/SlidingTimer" to="PlayerBody" method="_on_sliding_timer_timeout"]
